@@ -96,8 +96,13 @@ let main () =
   let ppf = Format.err_formatter in
   Clflags.native_code := true;
   let program = "ocamlnat" in
+  let display_deprecated_script_alert =
+    Array.length !argv >= 2 && Topcommon.is_command_like_name !argv.(1)
+  in
   Topcommon.update_search_path_from_env ();
   Compenv.readenv ppf Before_args;
+  if display_deprecated_script_alert then
+    Location.deprecated_script_alert program;
   Clflags.add_arguments __LOC__ Options.list;
   Compenv.parse_arguments ~current argv file_argument program;
   Compmisc.read_clflags_from_env ();
